# This is the main CMakeLists file for NeuronScQt demo programs
#
# @author János Végh

# It is just a simple proxy module for the subdirectories

message(HIGHLIGHTED "Configuring 'Demo' executables")

#add_subdirectory(AP_Conceptual)
#add_subdirectory(scQtSimulator)
#add_subdirectory(CustomPlotRealTime)
add_subdirectory(CustomPlotAnimate)
#add_subdirectory(MultiThread)
